
@startuml Line & Point

class Line{
    - len:double
    + Line(xp1:Point,xp2:Point)
    + Line(:Line &)
    + getLen():double
}

class Point{
    - x:int
    - y:int
    + Point(xx:int=0,yy:int=0)
    + Point(P:Point&)
    + getX():int
    + getY():int
}

Line "1..*" *--> "2"Point

Line ..|> Point

@enduml
